// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SingleInput /> should overwrite the default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SingleInput
    content=""
    controlFunc={[Function]}
    inputType="text"
    name="test_name"
    pattern=""
    placeholder=""
    required={true}
    size=""
    title="Test name"
    wrapper="test-wrapper"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="app-form-label"
          htmlFor="test_name"
          id="test_nameLabel"
>
          Test name
</label>,
        <input
          autoComplete="test_name"
          className="app-form-input"
          defaultValue=""
          id="test_nameInput"
          name="test_name"
          onChange={[Function]}
          pattern=""
          placeholder=""
          required={true}
          type="text"
/>,
        <p
          className="app-form-error"
          id="test_nameError"
/>,
      ],
      "className": "test-wrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Test name",
          "className": "app-form-label",
          "htmlFor": "test_name",
          "id": "test_nameLabel",
        },
        "ref": null,
        "rendered": "Test name",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "autoComplete": "test_name",
          "className": "app-form-input",
          "defaultValue": "",
          "id": "test_nameInput",
          "name": "test_name",
          "onChange": [Function],
          "pattern": "",
          "placeholder": "",
          "required": true,
          "type": "text",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "app-form-error",
          "id": "test_nameError",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="app-form-label"
            htmlFor="test_name"
            id="test_nameLabel"
>
            Test name
</label>,
          <input
            autoComplete="test_name"
            className="app-form-input"
            defaultValue=""
            id="test_nameInput"
            name="test_name"
            onChange={[Function]}
            pattern=""
            placeholder=""
            required={true}
            type="text"
/>,
          <p
            className="app-form-error"
            id="test_nameError"
/>,
        ],
        "className": "test-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test name",
            "className": "app-form-label",
            "htmlFor": "test_name",
            "id": "test_nameLabel",
          },
          "ref": null,
          "rendered": "Test name",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoComplete": "test_name",
            "className": "app-form-input",
            "defaultValue": "",
            "id": "test_nameInput",
            "name": "test_name",
            "onChange": [Function],
            "pattern": "",
            "placeholder": "",
            "required": true,
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "app-form-error",
            "id": "test_nameError",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SingleInput /> should render itself 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SingleInput
    content=""
    controlFunc={[Function]}
    inputType="text"
    name="test_name"
    pattern=""
    placeholder=""
    required={true}
    size=""
    title="Test name"
    wrapper="app-form-group"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="app-form-label"
          htmlFor="test_name"
          id="test_nameLabel"
>
          Test name
</label>,
        <input
          autoComplete="test_name"
          className="app-form-input"
          defaultValue=""
          id="test_nameInput"
          name="test_name"
          onChange={[Function]}
          pattern=""
          placeholder=""
          required={true}
          type="text"
/>,
        <p
          className="app-form-error"
          id="test_nameError"
/>,
      ],
      "className": "app-form-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Test name",
          "className": "app-form-label",
          "htmlFor": "test_name",
          "id": "test_nameLabel",
        },
        "ref": null,
        "rendered": "Test name",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "autoComplete": "test_name",
          "className": "app-form-input",
          "defaultValue": "",
          "id": "test_nameInput",
          "name": "test_name",
          "onChange": [Function],
          "pattern": "",
          "placeholder": "",
          "required": true,
          "type": "text",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "app-form-error",
          "id": "test_nameError",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="app-form-label"
            htmlFor="test_name"
            id="test_nameLabel"
>
            Test name
</label>,
          <input
            autoComplete="test_name"
            className="app-form-input"
            defaultValue=""
            id="test_nameInput"
            name="test_name"
            onChange={[Function]}
            pattern=""
            placeholder=""
            required={true}
            type="text"
/>,
          <p
            className="app-form-error"
            id="test_nameError"
/>,
        ],
        "className": "app-form-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test name",
            "className": "app-form-label",
            "htmlFor": "test_name",
            "id": "test_nameLabel",
          },
          "ref": null,
          "rendered": "Test name",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoComplete": "test_name",
            "className": "app-form-input",
            "defaultValue": "",
            "id": "test_nameInput",
            "name": "test_name",
            "onChange": [Function],
            "pattern": "",
            "placeholder": "",
            "required": true,
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "app-form-error",
            "id": "test_nameError",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
